--- a/package.json
+++ b/package.json
@@ -5,5 +5,8 @@
     "maths.ts": "^0.0.8",
     "typescript": "^5.3.3",
     "vite": "^5.1.4"
+  },
+  "devDependencies": {
+    "vite-plugin-glsl": "^1.2.1"
   }
 }
