--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "math.gl": "^4.0.0",
     "maths.ts": "^0.0.8",
     "typescript": "^5.3.3",
-    "vite": "^5.1.4"
+    "vite": "^5.1.4",
+    "webgpu-utils": "^1.5.1"
   },
   "devDependencies": {
     "vite-plugin-glsl": "^1.2.1"
