--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,11 +34,11 @@
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/@webgpu/types",
-      // "./node_modules/vite-plugin-glsl/*",
-      ],
-    // "types": [
-    //   "vite-plugin-glsl/ext"
-    // ],
+      "./node_modules/vite-plugin-glsl/",
+    ], 
+    "types": [
+      "ext"
+    ],
     // "allowUmdGlobalAccess": true,                     /* Allow accessing UMD globals from modules. */
     // "moduleSuffixes": [],                             /* List of file name suffixes to search when resolving a module. */
     // "allowImportingTsExtensions": true,               /* Allow imports to include TypeScript file extensions. Requires '--moduleResolution bundler' and either '--noEmit' or '--emitDeclarationOnly' to be set. */
@@ -112,9 +112,6 @@
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
-  "exclude": [
-    "node_modules"
-  ],
   "include": [
     "./src/**/*.ts"
   ]
